src/test/run-pass/issue-3461.rs
// xfail-test
fn main() {

    fn foo() { }
    
    let bar: ~fn() = ~foo;
}